fix: use existing secret

--- a/chart/templates/secret.yaml
+++ b/chart/templates/secret.yaml
@@ -1,11 +1,13 @@
+{{- if .Values.rootToken.create }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "sulfoxide-cobalt.fullname" . }}
+  name: {{ .Values.rootToken.name }}
   labels: {{- include "sulfoxide-cobalt.labels" . | nindent 4 }}
-    atomi.cloud/module: "credentials"
   annotations: {{- include "sulfoxide-cobalt.annotations" . | nindent 4 }}
-    atomi.cloud/module: "credentials"
 type: Opaque
 data:
   "{{ .Values.rootToken.key }}": "{{ .Values.rootToken.value | b64enc }}"
+{{- end }}
+
+
