--- a/chart/templates/secret_store.yaml
+++ b/chart/templates/secret_store.yaml
@@ -13,6 +13,6 @@ spec:
       auth:
         secretRef:
           dopplerToken:
-            name: {{ include "sulfoxide-cobalt.fullname" . }}
+            name: {{ .Values.rootToken.name }}
             key: {{ .Values.rootToken.key }}
             namespace: {{ .Release.Namespace }}
