upstream: upgrade nix, helm upstream, GHA

--- a/chart/templates/doppler_secret_store.yaml
+++ b/chart/templates/doppler_secret_store.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Values.rootToken.type "doppler" }}
 apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
@@ -16,3 +17,4 @@ spec:
             name: {{ .Values.rootToken.name }}
             key: {{ .Values.rootToken.key }}
             namespace: {{ .Release.Namespace }}
+{{- end }}
