fix: confusing store name

--- a/chart/values.entei.topaz.yaml
+++ b/chart/values.entei.topaz.yaml
@@ -25,6 +25,8 @@ external-secrets:
     podAnnotations:
       <<: *tags
 
+storeName: infisical
+
 rootToken:
   name: cobalt-infisical
   clientIdKey: CLIENT_ID
