--- a/chart/templates/doppler_secret_store.yaml
+++ b/chart/templates/doppler_secret_store.yaml
@@ -1,5 +1,5 @@
 {{ if eq .Values.rootToken.type "doppler" }}
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ClusterSecretStore
 metadata:
   name: "{{ .Values.storeName }}"
